[gd_scene load_steps=3 format=3 uid="uid://vwakonv48hct"]

[ext_resource type="Script" uid="uid://beqa1ej7jam6n" path="res://MapEditor/Markers/bpm_guide.gd" id="1_ckwqc"]
[ext_resource type="Texture2D" uid="uid://bpiviso7nfgfy" path="res://Assets/Images/icon.svg" id="1_pdff6"]

[node name="BPMGuide" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ckwqc")

[node name="MarkerButton" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 100.0
offset_bottom = 12.0
texture_normal = ExtResource("1_pdff6")
ignore_texture_size = true
stretch_mode = 0

[node name="ColorRect" type="ColorRect" parent="MarkerButton"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -12.0
offset_right = 1.0
offset_bottom = 12.0
grow_vertical = 2
mouse_filter = 2

[node name="BPMLabel" type="RichTextLabel" parent="MarkerButton"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 80.0
offset_bottom = 15.0
mouse_filter = 2
bbcode_enabled = true
text = "[font_size=10]bpm: 60"
fit_content = true

[node name="EdgeMarker" type="TextureButton" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 95.0
offset_right = 105.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("1_pdff6")
ignore_texture_size = true
stretch_mode = 0

[node name="ColorRect" type="ColorRect" parent="EdgeMarker"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -12.0
offset_right = 1.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="property_list_changed" from="." to="." method="_on_property_list_changed"]
